<?xml version="1.0"?>
<package format="2">
  <name>sick_tim</name>
  <version>0.0.10</version>
  <description>
    A ROS driver for the SICK TiM series of laser scanners.
  </description>

  <maintainer email="martin.guenther@dfki.de">Martin Günther</maintainer>
  <author email="ros@jochen.sprickerhof.de">Jochen Sprickerhof</author>
  <author email="martin.guenther@dfki.de">Martin Günther</author>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/sick_tim</url>
  <url type="repository">https://github.com/uos/sick_tim</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>diagnostic_updater</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>libusb-1.0-dev</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>diagnostic_updater</exec_depend>
  <exec_depend>dynamic_reconfigure</exec_depend>
  <exec_depend>libusb-1.0</exec_depend>
</package>
